# fractal-rendering

./: CMakeLists.txt  FractalRenderingManager.hpp  README.md  main.cpp
cmake/: IgnoreExternalHeadersWarning.cmake  ImportFRRTarget.cmake  ImportRaylibTarget.cmake
include/frr/: common.hpp  naive.hpp  simd.hpp
include/frr/impl/: naive.hpp  simd.hpp  threadpool.hpp  threads.hpp
include/frr/utils/: Barrier.hpp  Camera.hpp  FractalRenderer.hpp  FractalRenderingManager.hpp  InputHandler.hpp  Vector.hpp  Window.hpp
shaders/: eriksonn.fs  grayscale.fs  wikipedia.fs
src/: naive.cpp  simd.cpp
src/impl/: naive.cpp  simd.cpp  threadpool.cpp  threads.cpp
src/utils/: FractalRenderer.cpp  FractalRenderingManager.cpp  InputHandler.cpp  WIndow.cpp
